Change log for duff
===================

Maintained since version 0.3.1.

2012-02-15  Camilla Berglund  <elmindreda@elmindreda.org>e

 * duff.1: Updated language on the different modes.
 * duff.1: Updated examples.
 * join-duplicates.sh: Fixed a few duff invocation bugs.

2012-02-13  Camilla Berglund  <elmindreda@elmindreda.org>e

 * duff.1: Added documentation for -u flag.
 * duff.h (DUPLICATE): Renamed from REPORTED.
 * duffdriver.c (process_uniques): Added function.
 * duffdriver.c (process_args): Added logic for -u flag.
 * duff.c (main, usage): Added -u flag for listing unique instead of duplicate
 files.

2012-02-12  Camilla Berglund  <elmindreda@elmindreda.org>

 * duffutil.c duff.h (PATH_SIZE_STEP): Added constant macro.
 * duff.1: Added documentation for -D flag.
 * dufffile.c (compare_files): Added logic for -D flag.
 * duff.c (main, usage): Added -D flag for limiting clusters to a single device.
 * duff.1: Various clarifications.

2012-01-28  Camilla Berglund  <elmindreda@elmindreda.org>

 * dufffile.c (compare_files): Removed superflous physical_flag test.
 * duff.h dufffile.c (init_file_list): Renamed from file_list_init.
 * duff.h dufffile.c (alloc_file): Renamed from file_list_alloc.
 * duff.h dufffile.c (file_list_empty): Renamed from empty_file_list.
 * duff.h dufffile.c (free_entry_list): Renamed from file_list_free.
 * duffdriver.c dufffile.c duffutil.c: Put non-static functions on top.
 * duffdriver.c (process_clusters): Initialized cluster index.
 * duffdriver.c (report_cluster): Made use of get_field_terminator.
 * duffutil.c (read_path): Made use of get_field_terminator.
 * duffutil.c (get_field_terminator): Added function.
 * duffutil.c (read_path): Removed limit on path length, updated signature.

2012-01-27  Camilla Berglund  <elmindreda@elmindreda.org>

 * dufffile.c (compare_entry_contents): Made warnings take -q into account.
 * dufffile.c (get_file_sample): Tagged file INVALID on read error.